# sonic-platform-daemons

./: .gitignore
crates/sonic-thermalctld/: Cargo.toml  Makefile
crates/sonic-thermalctld/src/: main.rs  updaters.rs
crates/thermalctld/: Cargo.toml  Makefile
crates/thermalctld/src/: chassis.rs  lib.rs  main.rs  monitor.rs  policy.rs  updaters.rs
crates/thermalctld/tests/: mock_platform.rs  mock_swsscommon.rs  test_thermalctld.rs
