[package]
name = "thermalctld"
version = "0.1.0"
edition = "2024"

[dependencies]
# SONiC dependencies
swss-common = { path = "../../../sonic-swss-common/crates/swss-common", features = ["async"] }
sonic-platform = { path = "../../../../platform/mellanox/crates/sonic-platform" }

# Async runtime
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "sync"] }

# Error handling and logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
mellanox = []